--- a/WebNotifier.csproj
+++ b/WebNotifier.csproj
@@ -33,7 +33,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -90,6 +90,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ShowWindow.cs" />
     <Compile Include="StringAddon.cs" />
+    <Compile Include="Utilities.cs" />
     <Compile Include="WebNotifier.cs" />
     <Compile Include="WebNotifier.Designer.cs">
       <AutoGen>True</AutoGen>
