-fixed some small bug which went in with the last commit -fixed WaitTime settings -prepare for more changes

--- a/WebNotifier.settings
+++ b/WebNotifier.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="textBox6" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="checkBox1" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
