-add NoPopUp option -edit README.md

--- a/App.config
+++ b/App.config
@@ -64,6 +64,9 @@
             <setting name="content5" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PopUp" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WebNotifier.WebNotifier>
     </userSettings>
 </configuration>
