--- a/WebNotifier.settings
+++ b/WebNotifier.settings
@@ -65,5 +65,8 @@
     <Setting Name="diffrentList" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PopUp" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
