- add using threads now so that it won't hang up by adding new addresses. - added WebSocket.cs for using C# as HTTP/HTTPS requester not complete. - added XML phraser for HTML body

--- a/WebNotifier.csproj
+++ b/WebNotifier.csproj
@@ -97,6 +97,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>WebNotifier.settings</DependentUpon>
     </Compile>
+    <Compile Include="WebSocket.cs" />
     <Compile Include="WebWorker.cs" />
     <Compile Include="WebWorkerSingelton.cs" />
     <EmbeddedResource Include="Form1.resx">
